# jar

./: -verso-docs.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  GENESIS.md  Jar.lean  Makefile  PR_PROPOSAL.md  README.md  SECURITY.md  genesis.json  index.html  lake-manifest.json  lakefile.lean  lakefile.toml  ranking.json  scores.json  xref.json
-verso-search/: searchIndex.js  searchIndex_103.js  searchIndex_11.js  searchIndex_121.js  searchIndex_123.js  searchIndex_13.js  searchIndex_133.js  searchIndex_186.js  searchIndex_187.js  searchIndex_202.js  searchIndex_215.js  searchIndex_217.js  searchIndex_218.js  searchIndex_229.js  searchIndex_233.js  searchIndex_245.js  searchIndex_249.js  searchIndex_251.js  searchIndex_3.js  searchIndex_39.js  searchIndex_45.js  searchIndex_49.js  searchIndex_51.js  searchIndex_64.js  searchIndex_65.js  searchIndex_73.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/cache/: genesis.json
.github/workflows/: ci-grey.yml  ci-spec.yml  docker.yml  docs.yml  genesis-merge.yml  genesis-pr-opened.yml  genesis-review.yml
Accumulation/Block-Level-Accumulation/: index.html
Accumulation/Data-Types/: index.html
Accumulation/Host-Calls-_LPAR____12___4_RPAR_/: index.html
Accumulation/Pipeline/: index.html
Accumulation/Single-Service-Accumulation/: index.html
Cryptographic-Primitives/BLS12-381/: index.html
Cryptographic-Primitives/Bandersnatch-Ring-VRF/: index.html
Cryptographic-Primitives/Utility/: index.html
Genesis/: Design.lean
Jar/: Accumulation.lean  Codec.lean  Consensus.lean  Crypto.lean  Erasure.lean  Json.lean  Merkle.lean  Notation.lean  PVM.lean  Services.lean  State.lean  StateSerialization.lean  Types.lean  Variant.lean
Notation-and-Conventions/: index.html
Polkadot-Virtual-Machine/: index.html
Protocol-Constants/: index.html
State-and-Transitions/: index.html
crates/grey-transpiler/: Cargo.toml
crates/grey-transpiler/src/: assembler.rs  elf.rs  emitter.rs  lib.rs  linker.rs  riscv.rs
docs/: CONTRIBUTING_CN.md  README_CN.md  benchmark.md  conformance-testing.md  governance-refusal.md  host-call-ordering.md  inference-shapes.md  interpreter-gas-branch-misprediction-analysis.md  negation-layer.md  network-public.md  patience-tax.md  pvm-recompiler-sandboxing.md
find/: index.html
fuzz/: Cargo.toml
grey/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  docker-compose.monitoring.yml
grey/crates/grey-merkle/: Cargo.toml
grey/crates/grey-merkle/src/: lib.rs  mmr.rs  state_serial.rs  trie.rs
grey/crates/grey-merkle/tests/: state_serial_test.rs
grey/crates/grey-transpiler/: Cargo.toml
grey/crates/grey-transpiler/src/: assembler.rs  emitter.rs  lib.rs  linker.rs  riscv.rs
grey/crates/grey-types/: Cargo.toml
grey/crates/grey-types/src/: config.rs  constants.rs  header.rs  lib.rs  serde_utils.rs  state.rs  validator.rs
rust/jar/: Cargo.toml
rust/jar-crypto/: Cargo.toml
rust/jar-crypto/src/: lib.rs
rust/jar-kernel/: Cargo.toml
rust/jar-kernel/src/: apply_block.rs  attest.rs  cap_registry.rs  cnode_ops.rs  crypto.rs  dispatch.rs  frame.rs  genesis.rs  host_abi.rs  host_calls.rs  invocation.rs  kernel.rs  lib.rs  pinning.rs  proposer.rs  reach.rs  runtime.rs  snapshot.rs  state_root.rs  storage.rs  transact.rs
rust/jar-kernel/src/cap/: attest.rs  capability.rs  kernel_cap.rs  mod.rs  pinning.rs
rust/jar-kernel/src/runtime/: hardware.rs  in_memory.rs  mod.rs
rust/jar-kernel/src/state/: cap_registry.rs  cnode.rs  code_blobs.rs  mod.rs  snapshot.rs  state_root.rs  storage.rs  vault_init.rs
rust/jar-kernel/src/types/: mod.rs
rust/jar-kernel/src/vm/: foreign_cnode.rs  frame.rs  host_abi.rs  mod.rs
rust/jar-kernel/src/vm/host_calls/: attest.rs  cap.rs  cnode.rs  mod.rs  slot.rs  storage.rs
rust/jar-kernel/tests/: apply_block.rs  cap_registry.rs  cnode_move.rs  dispatch_pipeline.rs  snapshot.rs  storage_quota.rs  vault_initialize.rs
rust/jar/src/: main.rs
rust/javm-guest-tests/: Cargo.toml
rust/javm-guest-tests/tests/: guest.rs
rust/javm-transpiler/: Cargo.toml
rust/javm-transpiler/src/: assembler.rs  emitter.rs  layout.rs  lib.rs  linker.rs  riscv.rs
scripts/: compare_states.py  compare_with_ref.py
services/: riscv32em-jam-pvm.json  riscv64em-javm.json
services/bench-ecrecover/: Cargo.toml  riscv64em-polkavm-cdylib.json
spec/: CLAUDE.md  Jar.lean  JarBook.lean  Makefile  README.md  lake-manifest.json  lakefile.lean
tools/: gen_assurances_tests.py  gen_authorizations_tests.py  gen_history_tests.py  gen_reports_tests.py  gen_statistics_tests.py  jam_codec.py
(+622 files in other folders)
