[package]
name = "grey-transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V ELF to JAM PVM transpiler"

[dependencies]
grey-pvm = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
