[package]
name = "jar-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic facade for the JAR minimum kernel."

[dependencies]
jar-types = { workspace = true }
blake2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
