[package]
name = "javm-transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V ELF to JAVM PVM transpiler"

[dependencies]
javm = { workspace = true }
scale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
