[package]
name = "grey-transpiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC-V ELF to JAM PVM transpiler"

[dependencies]
javm = { workspace = true }
scale = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }

[dev-dependencies]
blake2 = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
