[package]
name = "grey-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, constants, and data structures for the JAM protocol."

[features]
testing = ["proptest"]

[dependencies]
hex = { workspace = true }
proptest = { workspace = true, optional = true }
serde = { workspace = true }
scale = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
